--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": [
     "./node_modules/@ts-mono/base/.eslintrc.json"
-  ]
+  ],
+  "rules": {
+    "import/no-unresolved": 0,
+  }
 }
