--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@ts-mono/base": "rwu823/ts-mono#base/latest",
     "@types/vscode": "^1.37.0",
     "sh-exec": "^2.1.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "vsce": "^1.66.0"
   },
   "scripts": {
     "rm-pkg": "rm -rf node_modules extensions/*/node_modules"
