--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,12 +68,16 @@ commands:
               source $BASH_ENV
 
 jobs:
-  build:
+  build-open-folder:
     executor: node
     steps:
-        - checkout-install
-        - run: yarn build
-        - run: cd released && yarn vsce package
+      - checkout-install
+      - run: yarn workspace open-folder build
+      - run: cd extensions/open-folder/released && yarn vsce package
+      - save_cache:
+          key: build:open-folder#{{ .Revision }}
+          paths:
+            - released
 
   test:
     executor: node
@@ -101,8 +105,6 @@ workflows:
 
   Base:
     jobs:
-      - build:
-          <<: *branch_testing
       - test:
           <<: *branch_testing
       - lint:
