--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "devDependencies": {
     "@ts-mono/base": "rwu823/ts-mono#base/latest",
+    "@types/moo": "^0.5.0",
     "@types/vscode": "^1.38.0",
     "sh-exec": "^2.1.0",
     "typescript": "^3.6.3"
